# no-drive

./: .gitignore  Cargo.toml
docs/: DOC.md  README.md
docs/sequence/: admin-management.puml  device-automatic-conflict-resolution.puml  device-receive-conflict-notifications.puml  device-receive-file-sync-notifications.puml  device-receive-general-notifications.puml  device-subscribe-to-mqtt-topics.puml  manage-files.puml  user-auth.puml  user-conflict-resolution.puml  user-download-file.puml  user-info.puml  user-init-sync.puml  user-oauth2.puml  user-periodic-sync.puml  user-register.puml  user-share.puml  user-upload-file.puml
docs/use-case/: client.puml  db.puml  file-service.puml  notification-service.puml  user-service.puml
no-drive-account-service/: Cargo.toml  README.md
no-drive-account-service/src/: main.rs
no-drive-file-service/: Cargo.toml  README.md
no-drive-file-service/src/: main.rs
no-drive-model/: Cargo.toml  Dockerfile  docker-compose.yaml
no-drive-model/migrations/2024-06-13-111020_create_users/: up.sql
no-drive-model/src/: lib.rs  models.rs  schema.rs
no-drive-model/src/common/: app.rs  user_service.rs
no-drive-notification-server/: Cargo.toml  README.md
no-drive-notification-server/src/: main.rs
