[workspace]

members = [
    "no-drive-model",
    "no-drive-account-service",
    "no-drive-file-service",
    "no-drive-notification-server"
]

[workspace.dependencies]
actix-multipart = "0"
actix-web = "4"

async-trait = "0"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0"
shaku = "0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

thiserror = "1"
anyhow = "1"

serde = { version = "1", features = ["derive"] }

log = "0"
env_logger = "0"
pretty_env_logger = "0"

tracing = "0"
tracing-log = "0"
tracing-actix-web = "0"
